<resources>
    <string name="app_name">IBD Tracker</string>
    <string name="title_activity_selector">SelectorActivity</string>

    <!-- Selector activity strings -->
    <string name="selector_splash">What form of IBD is being tracked?</string>
    <string name="selector_or">Or</string>
    <string name="selector_button_crohns">Crohn\'s Disease</string>
    <string name="selector_button_colitis">Ulcerative Colitis</string>

    <!-- Weight entry strings -->
    <string name="weight_prompt">When you are not experiencing a flare up, what is an estimate of your typical weight? (KGs)</string>
    <string name="weight_save">Save weight</string>

    <!-- Navvbar strings -->
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_survey">Survey</string>
    <string name="nav_misc">Misc.</string>
    <string name="nav_settings">Settings</string>

    <!-- Survey general strings -->
    <string name="survey_title">Symptom questionnaire</string>
    <string name="survey_info">Please answer the following questions by selecting a value from those provided. Explanations will be provided where necessary.</string>
    <string name="survey_previous_day">Previous day</string>
    <string name="survey_next_day">Next day</string>
    <string name="survey_save">Save answers</string>

    <!-- survey crohns strings -->
    <string name="crohns_q1">How many liquid or soft stools did you pass today?</string>
    <string name="crohns_q1_hint">A whole number</string>

    <string name="crohns_q2">Are you using diphenoxylate or loperamide for diarrhoea?</string>
    <string name="crohns_q2_a1">Yes</string>
    <string name="crohns_q2_a2">No</string>

    <string name="crohns_q3">Have you experienced any abdominal (stomach) pain over the last 24 hours?</string>
    <string name="crohns_q3_a1">None</string>
    <string name="crohns_q3_a2">Mild pain</string>
    <string name="crohns_q3_a3">Moderate pain</string>
    <string name="crohns_q3_a4">Severe pain</string>

    <string name="crohns_q4">How would you describe your general well being over the last 24 hours?</string>
    <string name="crohns_q4_a1">Well/Average</string>
    <string name="crohns_q4_a2">Slightly below average</string>
    <string name="crohns_q4_a3">Poor</string>
    <string name="crohns_q4_a4">Very poor</string>
    <string name="crohns_q4_a5">Terrible</string>

    <string name="crohns_q5">Are you experiencing any of the following complications? (Check all that apply)</string>
    <string name="crohns_q5_a1">Joint pain</string>
    <string name="crohns_q5_a2">Irritation and/or swelling of the eye</string>
    <string name="crohns_q5_a3">Red patches and/or large bumps on the skin</string>
    <string name="crohns_q5_a4">Tears/pain and/or abscesses near the anus</string>
    <string name="crohns_q5_a5">Any other fistulae</string>
    <string name="crohns_q5_a6">Fever</string>

    <string name="crohns_q6">Have you discovered any abdominal masses in the last 24 hours?</string>
    <string name="crohns_q6_a1">No mass discovered</string>
    <string name="crohns_q6_a2">Possible mass discovered</string>
    <string name="crohns_q6_a3">Definite mass discovered</string>


    <!--Colitis survey strings -->
    <string name="colitis_q1">How many bowel movements have you had during the DAY?</string>
    <string name="colitis_q1_hint">Non-negative whole number</string>

    <string name="colitis_q2">How many bowel movements have you had during the NIGHT?</string>

    <string name="colitis_q3">When you need to have a bowel movement, how urgent do you feel it is?</string>
    <string name="colitis_q3_a1">No urgency</string>
    <string name="colitis_q3_a2">Slight urgency</string>
    <string name="colitis_q3_a3">Immediate need (toilet is nearby)</string>
    <string name="colitis_q3_a4">Lack of voluntary control</string>

    <string name="colitis_q4">On a scale of 0-10 - 0 being terrible and 10 being amazing - how
    has your has your general wellbeing been over the last 24 hours?</string>
    <string name="colitis_q4_hint">0-10</string>

    <string name="colitis_q5">Are you experiencing any of the following complications? (Check all that apply)</string>
    <string name="colitis_q5_a1">Joint pain</string>
    <string name="colitis_q5_a2">Irritation and/or swelling of the eye</string>
    <string name="colitis_q5_a3">Red patches and/or large bumps on the skin</string>
    <string name="colitis_q5_a4">A new/rapidly growing painful ulcer on your skin</string>

    <string name="colitis_q6">Have you noticed any blood in any of your bowel movements?</string>
    <string name="colitis_q6_a1">No blood</string>
    <string name="colitis_q6_a2">Trace amount of blood</string>
    <string name="colitis_q6_a3">Blood makes up less than half of bowel movement</string>
    <string name="colitis_q6_a4">Blood makes up more than half of bowel movement</string>

    <!-- shared survey strings -->
    <string name="shared_q1">What is your current weight? (KGs)</string>
    <string name="shared_q1_hint">Weight in kilograms</string>
    <string name="shared_date">Response for: </string>

    <!-- Shared dashboard strings -->
    <string name="dashboard_prediction">Press the button to predict the status of your IBD.</string>
    <string name="dashboard_predict_button">Predict</string>

    <string name="dashboard_weight">Weight</string>

    <!-- Crohns dashboard strings -->
    <string name="dashboard_soft_stools">Soft/Liquid Stools</string>
    <string name="dashboard_abdominal_pain">Abdominal Pain</string>
    <string name="dashboard_crohns_wellbeing">General Well-being</string>

    <!-- Colitis dashboard strings -->
    <string name="dashboard_bowel_day">Day Bowel Movements</string>
    <string name="dashboard_bowel_night">Night Bowel Movements</string>
    <string name="dashboard_blood">Blood in Stool</string>


    <!-- App settings string -->
    <string name="settings_title">Settings &amp; Info</string>
    <string name="settings_update_weight">Update typical weight</string>
    <string name="settings_current_weight">Current weight is: </string>
    <string name="settings_update_button">Update</string>
    <string name="settings_reset">Reset app</string>
    <string name="settings_reset_info">This will delete all data stored by the app. This can not be undone.</string>

    <string name="settings_dialog_message">This can not be undone. Are you sure you want to continue?</string>
    <string name="settings_dialog_confirm">Delete data</string>
    <string name="settings_dialog_cancel">Cancel</string>

    <string name="settings_ai_title">How does the AI work?</string>
    <string name="settings_ai_explanation">
        The AI is implemented by following a rule based approach. This is also known as a rule based system (RBS).
    A RBS is a form of AI where all known outcomes are predetermined, with the outcome being chosen depending on a set of "rules" programmed into the system.
        \n \n
    The "rules" for the RBS in this app have been adapted from the Crohns Disease Activity Index (CDAI) and the Patient Simple Clinical Colitis Activity Index (PSCCAI)
    These indexes are used by medical professionals to gauge the status of a patients IBD.
        \n \n
    This status is determined by answering a series of questions. These questions are the same ones found in the activity pages. Each answer represents a score,
    with each question having its answers averaged over 7 days, with averages being rounded to a whole number. The average score for each question is then summed, resulting in a final score.
        \n \n
    The final score is then used to provide a classification.
        \n \n
    The indexes are available online, so it is possible to see how the scores are assigned to each question.
    </string>

    <!-- Misc activity strings -->
    <string name="misc_resources">Open Crohn\'s and Colitis UK resources.</string>
    <string name="misc_notification_channel_id">IBD</string>
    <string name="misc_notification_channel_name">IBD Tracker</string>
    <string name="misc_notification_channel_description">IBD Tracker medicine notifications</string>
    <string name="misc_create_reminder">Create reminder</string>

    <!-- Notification strings -->
    <string name="notification_add">Add a reminder</string>
    <string name="notification_title">Enter reminder text</string>
    <string name="notification_title_hint">E.g. Take azathioprine</string>

    <string name="notification_time">Reminder time</string>

    <string name="notification_repeating_number">Remind me every....</string>

    <string name="notification_repeating"></string>
    <string name="notification_repeating_hour">Hours</string>
    <string name="notification_repeating_day">Days</string>
    <string name="notification_repeating_week">Weeks</string>
    <string name="notification_repeating_monthly">Months</string>

    <string name="notification_save">Save reminder</string>

    <!-- Reminder recycler strings -->
    <string name="notification_placeholder_text">Placeholder</string>
    <string name="notification_placeholder_time">12:00</string>
    <string name="notification_placeholder_frequency">Every 1 day(s)</string>

    <string name="notification_delete">Delete</string>
    <string name="notification_switch_text">Status</string>
    <string name="notification_switch_on">On</string>
    <string name="notification_switch_off">Off</string>

</resources>